@@ -1,13 +1,8 @@
-usr/bin/camlp4boot
 usr/bin/camlp4of
 usr/bin/camlp4rf
 usr/bin/camlp4oof
 usr/bin/camlp4orf
 usr/bin/camlp4prof
-@OCamlStdlibDir@/camlp4/camlp4of.cma
-@OCamlStdlibDir@/camlp4/camlp4rf.cma
-@OCamlStdlibDir@/camlp4/camlp4oof.cma
-@OCamlStdlibDir@/camlp4/camlp4orf.cma
 OPT: usr/bin/camlp4of.opt
 OPT: usr/bin/camlp4rf.opt
 OPT: usr/bin/camlp4oof.opt
